--- a/themes/edidor/layouts/partials/list.html
+++ b/themes/edidor/layouts/partials/list.html
@@ -1,15 +1,15 @@
 {{ $paginator := (.Paginate (.Pages.GroupByDate "2006-01")).PageGroups  }}
 {{ range $paginator }}
 <h2 class="title group-date">
-    <time datetime="{{ .Key }}">{{ .Key }}</time>
+<time datetime="{{ .Key }}">{{ .Key }}</time>
 </h2>
 <ul class="list control">
     {{ range .Pages }}
     <li class="item">
         <h4 class="title"><a href="{{ .Permalink }}" class="btn">{{ .Title }}</a></h4>
         <div class="item-meta">
-            <time datetime="{{ .PublishDate.Format "01-02" }}">
-                {{ .PublishDate.Format "01-02" }}
+            <time datetime="{{ .PublishDate.Format "2006.01.02" }}">
+            {{ .PublishDate.Format "2006-01-02" }}
             </time>
         </div>
     </li>
