--- a/themes/edidor/layouts/partials/sidebar_posts.html
+++ b/themes/edidor/layouts/partials/sidebar_posts.html
@@ -1,3 +1,4 @@
+<h4 style="color: white;" class="taxonomy-key">Recent Posts</h4>
 <ul class="posts control">
     {{ range first 10 (where (where .Site.RegularPages.ByDate.Reverse "Type" "in" .Site.Params.mainSections ) "Params.hidden" "!=" true) }}
     <li><a class="no-break btn" href='{{ .RelPermalink }}'><i class="icon icon-post"></i> {{- .Title -}}</a></li>
