--- a/static/css/kfc.css
+++ b/static/css/kfc.css
@@ -50,3 +50,28 @@ blockquote {
     margin: 1.2em 0;
     border-left: 7px solid #3083fe;
 }
+
+/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    /*background: rgba(255,0,1,0.8); */
+    background: #a3be8c;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+    /*background: rgba(255,0,0,0.4); */
+    background: #8fbcbb; 
+}
