--- a/themes/edidor/layouts/partials/sidebar_posts.html
+++ b/themes/edidor/layouts/partials/sidebar_posts.html
@@ -1,5 +1,21 @@
-<h4 style="color: white;" class="taxonomy-key">Recent Posts</h4>
-<ul class="posts control">
+<ul class="control">
+    {{ range $taxonomyname, $taxonomy := .Site.Taxonomies }}
+    <br>
+    <li class="taxonomy-key">{{ $taxonomyname | humanize }}</li>
+    {{ range $key, $value := $taxonomy }}
+    {{ if $value.Count }}
+    <li>
+        <a href="{{$taxonomyname | absURL}}/{{ $key }}" class="btn">
+            <i class="icon icon-{{$taxonomyname}}"></i>
+            {{ $key }}
+            <span class="count">{{ $value.Count }}</span>
+        </a>
+    </li>
+    {{ end }}
+    {{ end }}
+    {{ end }}
+    <br>
+    <li class="taxonomy-key">Recent Posts</li>
     {{ range first 10 (where (where .Site.RegularPages.ByDate.Reverse "Type" "in" .Site.Params.mainSections ) "Params.hidden" "!=" true) }}
     <li><a class="no-break btn" href='{{ .RelPermalink }}'><i class="icon icon-post"></i> {{- .Title -}}</a></li>
     {{ end }}
