--- a/css/kfc.css
+++ b/css/kfc.css
@@ -10,6 +10,10 @@ ul {
     margin-left: 1em;
 }
 
+p {
+    text-indent: 30px;
+}
+
 td, th {
     border-right: 1px solid #dcdcdc;
     border-left: 1px solid #dcdcdc;
@@ -59,23 +63,23 @@ blockquote {
 ::-webkit-scrollbar {
     width: 12px;
 }
- 
+
 /* Track */
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     -webkit-border-radius: 10px;
     border-radius: 10px;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
     /*background: rgba(255,0,1,0.8); */
     background: #a3be8c;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
 ::-webkit-scrollbar-thumb:window-inactive {
     /*background: rgba(255,0,0,0.4); */
-    background: #8fbcbb; 
+    background: #8fbcbb;
 }
